<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ResumenFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".view.ContenedorCheckFragment">


            <ImageView
                android:id="@+id/imageView_glide"
                android:layout_width="411dp"
                android:layout_height="200dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/backgrounds/scenic" />

            <TextView
                android:id="@+id/tv_departamento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="64dp"
                android:text="TextView"
                app:layout_constraintBaseline_toBaselineOf="@+id/tv_condominio"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tv_condominio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginTop="12dp"
                android:text="TextView"
                app:layout_constraintEnd_toStartOf="@+id/tv_departamento"
                app:layout_constraintHorizontal_bias="0.065"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView_glide" />

            <RadioGroup
                android:id="@+id/rdg_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.229"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_condominio">

                <CheckBox
                    android:id="@+id/chk_luces"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cb_luces" />

                <CheckBox
                    android:id="@+id/chk_dormitorio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cb_dormitorio" />

                <CheckBox
                    android:id="@+id/chk_cocina"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cb_cocina" />

                <CheckBox
                    android:id="@+id/chk_baño"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cb_bano" />

            </RadioGroup>

            <RadioGroup
                android:id="@+id/rdg_buton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintTop_toBottomOf="@+id/rdg_checkbox"
                tools:layout_editor_absoluteX="20dp">

                <RadioButton
                    android:id="@+id/rd_normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_normal" />

                <RadioButton
                    android:id="@+id/rd_regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_regular" />

                <RadioButton
                    android:id="@+id/rd_malas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_mala" />
            </RadioGroup>

            <Button
                android:id="@+id/bt_alerta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="60dp"
                android:enabled="false"
                android:text="Alerta"
                app:layout_constraintBaseline_toBaselineOf="@+id/bt_guardar"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/bt_guardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Guardar"
                app:layout_constraintEnd_toStartOf="@+id/bt_alerta"
                app:layout_constraintHorizontal_bias="0.46"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_resultado" />

            <TextView
                android:id="@+id/tv_resultado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="TextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rdg_buton" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</FrameLayout>